# DuplicateSearch_k-partition

./: .gitignore  CMakeLists.txt  EXP4.sh  Exp_CW_EXP3.sh  Exp_CW_generation.sh  Exp_CW_query copy.sh  Exp_CW_query.sh  IO.hpp  KMINS_build  OPH.cc  OPH_build  OPH_build.cc  OPH_longest.cc  OPH_longest_filter.cc  README.md  a.out  buildCompactWindows.cc  draw.py  draw_exp1.py  draw_exp2.py  draw_exp3.py  draw_text.py  exp1 copy.txt  exp1.txt  exp1_1.txt  makefile  scala-QPS.plt  scala-legend.plt  segTree.hpp  update.hpp
EXP1/: README.md  build_compact_windows.sh  draw.py  query.sh  rebuildForOWTKMINS.sh  rebuildForOWTOPH.sh  rebuildForPAN11KMIN.sh  rebuildForPAN11OPH.sh  rebuildForWiki40KMINS.sh  rebuildForWiki40OPH.sh
EXP11/: pan_avg_time_vary_k(All VS Longest).eps  pan_avg_time_vary_k(Arbitrarily VS by Position).eps  pan_avg_time_vary_k(Interval Scan VS Segment Tree).eps  pan_avg_time_vary_theta(All VS Longest).eps  pan_avg_time_vary_theta(Arbitrarily VS by Position).eps  pan_avg_time_vary_theta(Interval Scan VS Segment Tree).eps  pan_avg_time_vary_theta(Interval Scan VS Segment Tree).txt  plot.plt
EXP2/: README.md  build_compact_windows.sh  draw.py  query.sh
EXP3/: draw.py  query.sh
EXP7/: build_compact_windows.sh  draw.py  index.plt  owt_avg_num_vary_k.eps  owt_avg_num_vary_k.txt  owt_avg_num_vary_n.eps  owt_avg_num_vary_n.txt  owt_avg_time_vary_k.eps  owt_avg_time_vary_k.txt  (+18 more)
baseline/: CMakeLists.txt  KMINS.cc  KMINS_INTERVAL_SCAN.cc  KMINS_INTERVAL_SCAN_filter.cc  KMINS_build.cc  README.md  buildCompactWindows.cc  buildKminsCW  calOVPRate.py
baseline/src/: runBF.cpp  runFaerie.cpp  runKMIN.cpp  runOPH.cpp  runSD.cpp
baseline/src/BF/: BruteForce.hpp
baseline/src/Faerie/: Faerie.hpp  unique_count_tree.hpp  wavelet_tree.hpp
baseline/src/MINHASH/: cw.hpp  kmins.hpp  oph.hpp  search.hpp  update.hpp
baseline/src/SEF/: SeedExtension.hpp
baseline/src/util/: Hasher.hpp  IO.hpp  segTree.hpp  util.hpp
baseline/test/: runOnePair.cpp
(+1911 files in other folders)
